--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">HabitTracker</string>
     <string name="app_title">Трекер привычек</string>
     <string name="priority_fmt">#%d</string>
+    <string name="description_add_new_habit">add new habit</string>
 </resources>
