--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="description_of_habit">Описание привычки</string>
     <string name="periodicity_first_part">раз</string>
     <string name="periodicity_second_part">в</string>
+    <string name="color_in_hsv">Цвет в HSV</string>
+    <string name="color_in_rgb">Цвет в RGB</string>
     <string-array name="priority_array">
         <item>1</item>
         <item>2</item>
