feat: добавлен активити с контейнерами фрагментов

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="color_in_hsv">Цвет в HSV</string>
     <string name="color_in_rgb">Цвет в RGB</string>
     <string name="change_color_description">выбор цвета</string>
+    <string name="menu_item_good_title">Хорошие</string>
+    <string name="menu_item_bad_title">Плохие</string>
     <string-array name="priority_array">
         <item>1</item>
         <item>2</item>
